apps/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  # nodeSelector:
  #   igpu: true
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      serviceAccountName: default
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: jellyfin
          image: "jellyfin/jellyfin:10.8.1"
          resources:
            requests:
              memory: "150Mi"
              cpu: "50m"
                # limits:
                #   memory: "10000Mi"
                #   cpu: "3000m"
          securityContext:
            privileged: true
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
            - name: igpu
              mountPath: /dev/dri
            - name: movies
              mountPath: /movies
            - name: shows
              mountPath: /shows
            - name: jasmine
              mountPath: /jasmine
          livenessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8096
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: transcode
          emptyDir:
            {}
        - name: igpu
          hostPath:
            path: /dev/dri
        - name: movies
          hostPath:
          path: "${MOVIES_PATH}"
        - name: shows
          hostPath:
            path: "${SHOWS_PATH}"
        - name: jasmine
          hostPath:
            path: "${JASMINE_PATH}"
