apps/jellyfin/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8096
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: jellyfin

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-local
  labels:
    app.kubernetes.io/name: jellyfin
  annotations:
spec:
  type: LoadBalancer
  ports:
  - port: 8096
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: jellyfin
